--- a/style.css
+++ b/style.css
@@ -1,3 +1,36 @@
-.hide{
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+    font-family: Arial, sans-serif;
+}
+
+
+#quiz {
+    text-align: center;
+    max-width: 600px;
+    padding: 20px;
+    background-color: #f5f5f5;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+.question {
     display: none;
+
+}
+
+button {
+    margin-top: 20px;
+}
+
+
+
+.selected-answer {
+    background-color: #4CAF50; /* Green background color */
+    color: #ffffff; /* White text color */
+    font-weight: bold; /* Make the text bold */
 }
